Fix problem with topics wrap and active btn reaction to hover.

--- a/styles/video.css
+++ b/styles/video.css
@@ -1,3 +1,8 @@
+.topics {
+    white-space: nowrap;
+    overflow-x: hidden;
+}
+
 .btn {
     background-color: #f2f2f2;
     border: none;
@@ -15,5 +20,9 @@
 
 .active {
     color: white;
+    background-color: black;
+}
+
+.active:hover {
     background-color: black;
 }
